# vmux

./: CLAUDE.md  PLAN.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
src/: App.css  App.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: browser.rs  claude_hooks.rs  commands.rs  context_store.rs  embeddings.rs  git_meta.rs  lib.rs  main.rs  osc.rs  rag.rs  state.rs  theme.rs  transcript.rs  window_tracking.rs  workspace.rs  worktree.rs
src-tauri/src/terminal/: agents.rs  cwd.rs  font.rs  grid.rs  input.rs  mod.rs  pty.rs  renderer.rs  shell.rs  window.rs
src/components/: BrowserPane.css  BrowserPane.tsx  ContextPanel.css  ContextPanel.tsx  FileTree.css  FileTree.tsx  KeyboardHelp.css  KeyboardHelp.tsx  Sidebar.css  Sidebar.tsx  SplitTree.css  SplitTree.tsx  TabView.css  TabView.tsx  TerminalPane.css  TerminalPane.tsx
