[package]
name = "vmux"
version = "0.1.0"
description = "Windows terminal multiplexer for AI coding agents"
authors = ["Dylan"]
edition = "2021"

[lib]
name = "vmux_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal state machine (VT/ANSI parser + grid)
alacritty_terminal = "0.25"

# PTY (ConPTY on Windows)
portable-pty = "0.9"

# GPU rendering
wgpu = "22"

# Font shaping and rasterization (ligatures, emoji, CJK)
cosmic-text = "0.12"

# Win32 APIs: child windows, ConPTY, DirectWrite, input
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_Debug",
] }

# raw-window-handle for wgpu surface + Tauri HWND access
raw-window-handle = "0.6"

# Persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# Git metadata
git2 = "0.19"

# Process/port info
sysinfo = "0.30"

# Utils
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
regex = "1"
bitflags = "2"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1", features = ["derive"] }
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"

[features]
default = []

# Prevents duplicate symbol errors on Windows
[profile.dev]
opt-level = 1
